メニューバー作成中。2行4列にならない

--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
 <header>
     <hi>KGカントリークラブ</hi>
     <nav>
-
+        <li>トップ</li>
+        <li>KGカントリークラブ</li>
+        <li>施設紹介</li>
+        <li>コース</li>
+        <br>
+        <li>アクセス</li>
+        <li>料金・予約</li>
+        <li>他イベントメニュー</li>
+        <li>初心者向けメニュー</li>
     </nav>
 </header>
 
