レスポンシブ対応導入(viewport)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         KGカントリークラブ
     </title>
     <link rel="icon" href="favicon.ico">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="discription" content="〇〇の自己紹介">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -16,14 +17,14 @@
     <hi>KGカントリークラブ</hi>
     <nav>
         <li>トップ</li>
-        <li>KGカントリークラブ</li>
+        <li>企業概要</li>
         <li>施設紹介</li>
         <li>コース</li>
         <br>
         <li>アクセス</li>
         <li>料金・予約</li>
-        <li>他イベントメニュー</li>
-        <li>初心者向けメニュー</li>
+        <li>他イベント</li>
+        <li>初心者向け</li>
     </nav>
 </header>
 
