--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
 
 <header>
     <hi>KGカントリークラブ</hi>
-    <nav>
+    <nav id="header">
         <li>トップ</li>
         <li>企業概要</li>
         <li>施設紹介</li>
         <li>コース</li>
-        <br>
         <li>アクセス</li>
         <li>料金・予約</li>
         <li>他イベント</li>
