style.cssを2分割。bodyとheadに分けた。

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="discription" content="〇〇の自己紹介">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/head_style.css">
+    <link rel="stylesheet" type="text/css" href="css/body_style.css">
 </head>
 
 <header>
@@ -31,6 +32,10 @@
 </header>
 
 <body>
+    <image>
+
+    </image>
+
     <footer>
         Copyright ©︎ 2019 Shima All Rights Reserved.
     </footer>
