予約フォーム仮置き

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li>施設紹介</li>
         <li>コース</li>
         <li>アクセス</li>
-        <li>料金・予約</li>
+        <li><a href="book.html">料金・予約</a></li>
         <li>他イベント</li>
         <li>初心者向け</li>
     </nav>
@@ -65,7 +65,7 @@
         </div>
     </div>
     
-</div>
+
 
 
 
