予約フォーム作成中

--- a/book.html
+++ b/book.html
@@ -22,7 +22,7 @@
         <li>施設紹介</li>
         <li>コース</li>
         <li>アクセス</li>
-        <li><a href="book.html">料金・予約</a></li>
+        <a href="book.html"><li>料金・予約</li></a>
         <li>他イベント</li>
         <li>初心者向け</li>
     </nav>
@@ -68,6 +68,10 @@
             </p>
             <br>
             <p>
+                E-mail:<input type="text">
+            </p>
+            <br>
+            <p>
                 日付:<input type="date" min="2019-07-11" max="2020-07-11"></input>
             </p>
             <br>
@@ -75,7 +79,10 @@
                 備考欄:<br>
                 <textarea type="textarea" name="kanso" rows="4" cols="40"></textarea>
             </p>
+            <br>
+            <input type="reset" VALUE="書き直し">
         </form>
+        <a href="confirm.html"><button>送信</button></a>
     </div>
     
    
