--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li>施設紹介</li>
         <li>コース</li>
         <li>アクセス</li>
-        <li><a href="book.html">料金・予約</a></li>
+        <a href="book.html"><li>料金・予約</li></a>
         <li>他イベント</li>
         <li>初心者向け</li>
     </nav>
