企業概要ページ作成開始、inline-boxの見直し

--- a/book.html
+++ b/book.html
@@ -17,8 +17,8 @@
 <header>
     <h3>KGカントリークラブ</h3>
     <nav id="header">
-        <li>トップ</li>
-        <li>企業概要</li>
+        <a href="index.html"><li>トップ</li></a>
+        <a href="overview.html"><li>企業概要</li></a>
         <li>施設紹介</li>
         <li>コース</li>
         <li>アクセス</li>
