--- a/overview.html
+++ b/overview.html
@@ -17,7 +17,7 @@
 <header>
     <h3>KGカントリークラブ</h3>
     <nav id="header">
-        <li>トップ</li>
+        <a href="index.html"><li>トップ</li></a>
         <a href="overview.html"><li>企業概要</li></a>
         <li>施設紹介</li>
         <li>コース</li>
@@ -30,11 +30,12 @@
 
 <body>
 
-    <div>
-        <p>送信しました。</p>
-        <a href="index.html"><button>戻る</button></a>
+    <div class="top-menu">
+        <div class="box2" width="20%">
+            ttt
+        </div>
     </div>
-    
+
     <footer>
         Copyright ©︎ 2019 Shima All Rights Reserved.
     </footer>
