グローバルナビゲーションの固定

--- a/confirm.html
+++ b/confirm.html
@@ -30,7 +30,7 @@
 
 <body>
 
-    <div>
+    <div class="text_center">
         <p>送信しました。</p>
         <a href="index.html"><button>戻る</button></a>
     </div>
