--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li>コース</li>
         <li>アクセス</li>
         <a href="book.html"><li>料金・予約</li></a>
-        <li>他イベント</li>
+        <a href="others.html"><li>他イベント</li></a>
         <li>初心者向け</li>
     </nav>
 </header>
@@ -34,10 +34,15 @@
     
    
     <div class="box1">
-        更新履歴
-        <div>    
-            <p>2019/07/11 Webサイトを公開しました!</p>
-        </div>
+        更新履歴  
+        <dl>
+            <dt>
+                2019/07/11
+            </dt>
+            <dd>
+                Webサイトを公開しました!
+            </dd>
+        </dl>
     </div>
     
     <div class="normal">
