--- a/others.html
+++ b/others.html
@@ -17,14 +17,14 @@
 <header>
     <h3>KGカントリークラブ</h3>
     <nav id="header">
-        <a href="index.html"><li>トップ</li></a>
-        <a href="overview.html"><li>企業概要</li></a>
-        <li>施設紹介</li>
-        <li>コース</li>
-        <li>アクセス</li>
-        <a href="book.html"><li>料金・予約</li></a>
-        <a href="others.html"><li>他イベント</li></a>
-        <li>初心者向け</li>
+            <a href="index.html"><li>トップ</li></a>
+            <a href="overview.html"><li>企業概要</li></a>
+            <li>施設紹介</li>
+            <li>コース</li>
+            <a href="map.html"><li>アクセス</li></a>
+            <a href="book.html"><li>料金・予約</li></a>
+            <a href="others.html"><li>他イベント</li></a>
+            <li>初心者向け</li>
     </nav>
 </header>
 
@@ -40,6 +40,10 @@
         </p>
         <div class="text_center">
             <h1>↓使用例↓</h1>
+        </div>
+        <div>
+                <img src="images/Drone.jpg" width="50%">
+                ドローン操縦
         </div>
     </div>
 
