他イベントメニューおおむね完成 あとはアクセス、初心者、コース図、企業概要

--- a/others.html
+++ b/others.html
@@ -46,7 +46,35 @@
                 ドローン操縦
         </div>
     </div>
+    
+    <div class="box2">
+        <div class="box-title">
+                場所リスト
+        </div>
+        <div>
+            <p>
+                KGカントリークラブでは、以下の場所をゴルフ以外の場所として貸し出しています。
+            </p>
+        </div>
+    </div>
 
+    <div class="box2">
+        <div class="box-title">
+            アイデア募集フォーム
+        </div>
+        <p>
+            皆さまからKGカントリークラブの利用方法についてアイデアを募集します!
+        </p>
+        <form>
+            <p>
+                イベント募集:<br>
+                <textarea type="textarea" name="kanso" rows="4" cols="40"></textarea>
+            </p>
+            <br>
+            <input type="reset" VALUE="書き直し">
+        </form>
+        <a href="confirm.html"><button>送信</button></a>
+    </div>
     <footer>
         Copyright ©︎ 2019 Shima All Rights Reserved.
     </footer>
