残りは初心者向けメニューのみ

--- a/course.html
+++ b/course.html
@@ -30,17 +30,27 @@
 
 <body>
 
-    
-        <div class="box2">
+    <div class="box2">
+        <div class="box-title">
+            全体図
+        </div>
+        <img src="images/kg-cl-map.gif">
+    </div>
+
+    <div class="box2">
             <div class="box-title">
-                概要
+                コース1の説明
             </div>
-            <div>
-                函館KGカントリークラブ」は北海道の表玄関・函館市内に位置し道南で最も恵まれた景観や自然と共生し、心の共感、心の余韻を追い求めて居ります。                    
+            <div class="inline_block">
+                <img src="images/out1.jpg">
+            </div>
+            <div class="inline_block">
+                    HDCP1の長いミドルホール。<br>
+                    真中の白樺まで300ヤードを越す。<br>
+                    ティーショットは、やや右目に落とすとセカンドが狙いやすい。<br>
             </div>
         </div>
-
-
+    
     <footer>
         Copyright ©︎ 2019 Shima All Rights Reserved.
     </footer>
