--- a/facility.html
+++ b/facility.html
@@ -33,12 +33,30 @@
     
         <div class="box2">
             <div class="box-title">
-                概要
+                景色
             </div>
-            <div>
-                函館KGカントリークラブ」は北海道の表玄関・函館市内に位置し道南で最も恵まれた景観や自然と共生し、心の共感、心の余韻を追い求めて居ります。                    
-            </div>
+            <img src="images/DSC_6077.JPG" width="100%">
         </div>
+
+        <div class="box2">
+                <div class="box-title">
+                    レストラン
+                </div>
+                <div class="inline_block">
+                    <img src="images/lamb.jpg">
+                </div>
+                <div class="inline_block">
+                        上ラムジンギスカンセット 〇〇円
+                </div>
+                <br>
+                <div class="inline_block">
+                    <img src="images/06yakisoba.jpg">
+                </div>
+                <div class="inline_block">
+                        あんかけやきそば 〇〇円
+                </div>
+        </div>
+
 
 
     <footer>
