--- a/others.html
+++ b/others.html
@@ -18,13 +18,13 @@
     <h3>KGカントリークラブ</h3>
     <nav id="header">
             <a href="index.html"><li>トップ</li></a>
-            <a href="overview.html"><li>企業概要</li></a>
-            <li>施設紹介</li>
-            <li>コース</li>
-            <a href="map.html"><li>アクセス</li></a>
-            <a href="book.html"><li>料金・予約</li></a>
-            <a href="others.html"><li>他イベント</li></a>
-            <li>初心者向け</li>
+        <a href="overview.html"><li>企業概要</li></a>
+        <li>施設紹介</li>
+        <a href="course.html"><li>コース</li></a>
+        <a href="map.html"><li>アクセス</li></a>
+        <a href="book.html"><li>料金・予約</li></a>
+        <a href="others.html"><li>他イベント</li></a>
+        <li>初心者向け</li>
     </nav>
 </header>
 
