--- a/book.html
+++ b/book.html
@@ -17,14 +17,14 @@
 <header>
     <h3>KGカントリークラブ</h3>
     <nav id="header">
-            <a href="index.html"><li>トップ</li></a>
-            <a href="overview.html"><li>企業概要</li></a>
-            <li>施設紹介</li>
-            <li>コース</li>
-            <a href="map.html"><li>アクセス</li></a>
-            <a href="book.html"><li>料金・予約</li></a>
-            <a href="others.html"><li>他イベント</li></a>
-            <li>初心者向け</li>
+        <a href="index.html"><li>トップ</li></a>
+        <a href="overview.html"><li>企業概要</li></a>
+        <li>施設紹介</li>
+        <a href="course.html"><li>コース</li></a>
+        <a href="map.html"><li>アクセス</li></a>
+        <a href="book.html"><li>料金・予約</li></a>
+        <a href="others.html"><li>他イベント</li></a>
+        <li>初心者向け</li>
     </nav>
 </header>
 
@@ -72,12 +72,23 @@
             </p>
             <br>
             <p>
+                希望プラン<br>
+                <input type="radio" value="self1" name="plan">平日セルフ 6,500円<br>
+                <input type="radio" value="self2" name="plan">平日セルフ(食事・送迎付) 8,000円<br>
+                <input type="radio" value="self3" name="plan">土日祝セルフ 9,300円<br>
+                <input type="radio" value="beginner" name="plan">初心者向け 9,300円<br>
+            </p>
+            <br>
+            <p>
                 日付:<input type="date" min="2019-07-11" max="2020-07-11"></input>
             </p>
             <br>
             <p>
                 備考欄:<br>
                 <textarea type="textarea" name="kanso" rows="4" cols="40"></textarea>
+            </p>
+            <p>
+                ※支払方法については、メールで案内を送信致します。
             </p>
             <br>
             <input type="reset" VALUE="書き直し">
