--- a/map.html
+++ b/map.html
@@ -17,14 +17,14 @@
 <header>
     <h3>KGカントリークラブ</h3>
     <nav id="header">
-        <a href="index.html"><li>トップ</li></a>
-        <a href="overview.html"><li>企業概要</li></a>
-        <li>施設紹介</li>
-        <li>コース</li>
-        <a href="map.html"><li>アクセス</li></a>
-        <a href="book.html"><li>料金・予約</li></a>
-        <a href="others.html"><li>他イベント</li></a>
-        <li>初心者向け</li>
+            <a href="index.html"><li>トップ</li></a>
+            <a href="overview.html"><li>企業概要</li></a>
+            <li>施設紹介</li>
+            <a href="course.html"><li>コース</li></a>
+            <a href="map.html"><li>アクセス</li></a>
+            <a href="book.html"><li>料金・予約</li></a>
+            <a href="others.html"><li>他イベント</li></a>
+            <li>初心者向け</li>
     </nav>
 </header>
 
@@ -36,6 +36,40 @@
     <div class="ggmap" width="100%">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2972.336152147483!2d140.8104874938726!3d41.842590908688344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f9e5f5341928587%3A0x14dffa09e575ec04!2z5Ye96aSo77yr77yn44Kr44Oz44OI44Oq44O844Kv44Op44OW!5e0!3m2!1sja!2sjp!4v1562604404580!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
+
+    <div class="box2">
+        <div class="box-title">
+            住所・電話番号
+        </div>
+        <dl>
+            <dt>
+                住所
+            </dt>
+            <dd>
+                〒041-0834 北海道函館市東山町２０５−１
+            </dd>
+            <dt>
+                電話番号
+            </dt>
+            <dd>
+                <a>0138-54-4111</a>
+            </dd>
+        </dl>
+    </div>
+
+    <div class="box2">
+            <div class="box-title">
+                タクシー予約
+            </div>
+            <dl>
+                <dt>
+                    北の星タクシー
+                </dt>
+                <dd>
+                    0120-971-822
+                </dd>
+            </dl>
+        </div>
 
     <footer>
         Copyright ©︎ 2019 Shima All Rights Reserved.
