メニューの大きさ変更

--- a/book.html
+++ b/book.html
@@ -91,9 +91,13 @@
                 ※支払方法については、メールで案内を送信致します。
             </p>
             <br>
+            <p><a href="confirm.html"><button>送信</button></a></p>
+            <br>
+            <br>
+            <br>
             <input type="reset" VALUE="書き直し">
         </form>
-        <a href="confirm.html"><button>送信</button></a>
+        
     </div>
     
    
