--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <p><h6>2019/07/11</h6></p>
         <h1>Webサイトを公開しました!</h1>
-        <img src="images/DSC_6075.JPG" width="100%"><br>
+        <!-- <img src="images/DSC_6075.JPG" width="100%"><br> -->
         <div class="normal">
             <p>KGカントリークラブのWebサイトが完成しました。<br>
             最新情報やお得な情報を公開していきますので、よろしくお願いします!            
