table要素を使ったら思った通りのレイアウトになった。 しかし、多分横並びにするのはやめる。

--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
 
 <body>
 
-    <div class="std_pad"> 
-        <div class="box2 inline_block">
-        <h1><p>KGカントリークラブへようこそ!</p></h1>
+    <div class="std_pad table_parent"> 
+        <div class="table_child">
+            <h2><p>ようこそ!</p></h2>
+            <p>
+                KGカントリークラブのWebサイトへようこそ
+            </p>
         </div>
-        <div class="inline_block">
-            <h1>Scene</h1>
+        <div class="table_child">
+            <div><h2>-景色-</h2></div>
             <a href="http://www.htmq.com/csskihon/603.shtml">
                 <div class="cp_cssslider">
                     <div class="cp_slidewrapper">
