TOP完成　あとは施設コース初心者向け

--- a/course.html
+++ b/course.html
@@ -15,41 +15,44 @@
 </head>
 
 <header>
-    <h3>KGカントリークラブ</h3>
+    <div style="text-align: left">
+        <div class="inline_block">
+            <a href="index.html"><img src="images/title.jpg" class="title" width="150px" height="auto"></a>
+        </div>
+        <div class="inline_block now_page">
+            <strong>コース</strong>
+        </div>
+    </div>
     <nav id="header">
-            <a href="index.html"><li>トップ</li></a>
-            <a href="overview.html"><li>企業概要</li></a>
-            <a href="facility.html"><li>施設紹介</li></a>
-            <a href="course.html"><li>コース</li></a>
-            <a href="map.html"><li>アクセス</li></a>
-            <a href="book.html"><li>料金・予約</li></a>
-            <a href="others.html"><li>他イベント</li></a>
-            <a href="beginner.html"><li>初心者向け</li></a>
+        <a href="facility.html"><li>施設・イベント</li></a>
+        <a href="course.html"><li>コース</li></a>
+        <a href="book.html"><li>料金・予約</li></a>
+        <a href="beginner.html"><li><img src=images/beginner.png width=18px height=18px>初心者向け</li></a>
     </nav>
 </header>
 
 <body>
 
+    <br>
+    <br>
+    <div style="color: #008000">
+        <h1>コース全体図</h1>
+    </div>
+    <div class="course_frame">
+        <img src="images/course.png" width="100%" height="auto">
+    </div>
     <div class="box2">
         <div class="box-title">
-            全体図
+            コース1の説明
         </div>
-        <img src="images/kg-cl-map.gif">
-    </div>
-
-    <div class="box2">
-            <div class="box-title">
-                コース1の説明
-            </div>
-            <div class="inline_block">
-                <img src="images/out1.jpg">
-            </div>
-            <div class="inline_block">
+        <div class="table_parent" style="table-layout: auto">
+            <div class="table_child" style="text-align: left">
                     HDCP1の長いミドルホール。<br>
                     真中の白樺まで300ヤードを越す。<br>
                     ティーショットは、やや右目に落とすとセカンドが狙いやすい。<br>
             </div>
         </div>
+    </div>
     
     <footer>
         Copyright ©︎ 2019 Shima All Rights Reserved.
