--- a/facility.html
+++ b/facility.html
@@ -15,9 +15,16 @@
 </head>
 
 <header>
-    <h3>KGカントリークラブ</h3>
+    <div style="text-align: left">
+        <div class="inline_block">
+            <a href="index.html"><img src="images/title.jpg" class="title" width="150px" height="auto"></a>
+        </div>
+        <div class="inline_block now_page">
+            <strong>施設・イベント</strong>
+        </div>
+    </div>
     <nav id="header">
-        <a href="facility.html"><li>施設紹介</li></a>
+        <a href="facility.html"><li>施設・イベント</li></a>
         <a href="course.html"><li>コース</li></a>
         <a href="book.html"><li>料金・予約</li></a>
         <a href="beginner.html"><li><img src=images/beginner.png width=18px height=18px>初心者向け</li></a>
@@ -25,15 +32,6 @@
 </header>
 
 <body>
-
-    
-        <div class="box2">
-            <div class="box-title">
-                景色
-            </div>
-            <img src="images/DSC_6077.JPG" width="100%">
-        </div>
-
         <div class="box2">
                 <div class="box-title">
                     レストラン
