--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <div class="inline_block">
             <a href="index.html"><img src="images/title.jpg" class="title" width="150px" height="auto"></a>
         </div>
-        <!-- <div class="inline_block now_page">
-            <strong>現在のページ:TOP</strong>
-        </div> -->
+        <div class="inline_block now_page">
+            <strong>TOP</strong>
+        </div>
     </div>
     <nav id="header">
         <a href="facility.html"><li>施設・イベント</li></a>
@@ -57,32 +57,55 @@
         </div>
         
         <div class="table_parent">
-            <div class="picture_frame overray table_child">
-                <div class="picture_item"><img src="images/gahag-0111777838-1.jpg" width=100% height=400px></div>
-                <a href="index.html">
+           <div class="picture_frame overray table_child">
+                <div class="picture_item"><img src="images/access.png" width=auto height=350px></div>
+                <!-- <div class="picture_item"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2972.336152147483!2d140.8104874938726!3d41.842590908688344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f9e5f5341928587%3A0x14dffa09e575ec04!2z5Ye96aSo77yr77yn44Kr44Oz44OI44Oq44O844Kv44Op44OW!5e0!3m2!1sja!2sjp!4v1562604404580!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></div> -->
+                <a href="map.html">
                     <div class="mask">
                             <div class="caption">
-                                <h1>予約</h1>
+                                <h1>アクセス</h1>
                             </div>    
                     </div>
                 </a>
             </div>
+
             <div class="picture_frame overray table_child">
-                    <div class="picture_item"><img src="images/drone.jpg" width=100% height=400px></div>
-                    <a href="index.html">
-                        <div class="mask">
-                                <div class="caption">
-                                    <h1>場所貸出について</h1>
-                                </div>    
-                        </div>
-                    </a>
+                <div class="picture_item"><img src="images/beginner.png"　width=300px height=350px></div>
+                <a href="index.html">
+                    <div class="mask">
+                            <div class="caption">
+                                <h1>初心者の方へ</h1>
+                            </div>    
+                    </div>
+                </a>
             </div>
         </div>
 
         <div class="table_parent">
             <div class="picture_frame overray table_child">
-                <div class="picture_item"><img src="images/gahag-0111777838-1.jpg" width=100% height=400px></div>
+                <div class="picture_item"><img src="images/course.png" width=100% height=350px></div>
                 <a href="index.html">
+                    <div class="mask">
+                            <div class="caption">
+                                <h1>コース</h1>
+                            </div>    
+                    </div>
+                </a>
+            </div>
+            <div class="picture_frame overray table_child">
+                <div class="picture_item"><img src="images/drone.jpg" width=100% height=350px></div>
+                <a href="index.html">
+                    <div class="mask">
+                            <div class="caption">
+                                <h1>場所貸出について</h1>
+                            </div>    
+                    </div>
+                </a>
+            </div>
+        </div>  
+        <div class="picture_frame overray">
+                <div class="picture_item"><img src="images/DSC_6075.JPG" width=100% height=350px></div>
+                <a href="book.html">
                     <div class="mask">
                             <div class="caption">
                                 <h1>予約</h1>
@@ -90,18 +113,6 @@
                     </div>
                 </a>
             </div>
-            <div class="picture_frame overray table_child">
-                    <div class="picture_item"><img src="images/beginner.png"　width=100% height=400px></div>
-                    <a href="index.html">
-                        <div class="mask">
-                                <div class="caption">
-                                    <h1>初心者の方へ</h1>
-                                </div>    
-                        </div>
-                    </a>
-            </div>
-        </div>
-        
     </div>    
    
     <!-- <div class="box2">
