--- a/book.html
+++ b/book.html
@@ -15,21 +15,22 @@
 </head>
 
 <header>
-    <h3>KGカントリークラブ</h3>
+    <div style="text-align: left">
+        <div class="inline_block">
+            <a href="index.html"><img src="images/title.jpg" class="title" width="150px" height="auto"></a>
+        </div>
+    </div>
     <nav id="header">
-            <a href="index.html"><li>トップ</li></a>
-            <a href="overview.html"><li>企業概要</li></a>
-            <a href="facility.html"><li>施設紹介</li></a>
-            <a href="course.html"><li>コース</li></a>
-            <a href="map.html"><li>アクセス</li></a>
-            <a href="book.html"><li>料金・予約</li></a>
-            <a href="others.html"><li>他イベント</li></a>
-            <a href="beginner.html"><li>初心者向け</li></a>
+        <a href="facility.html"><li>施設・イベント</li></a>
+        <a href="course.html"><li>コース</li></a>
+        <a href="book.html"><li>料金・予約</li></a>
+        <a href="beginner.html"><li><img src=images/beginner.png width=18px height=18px>初心者向け</li></a>
     </nav>
 </header>
 
-<body>
+<body style="text-align: left">
 
+    <br>
     <div class="box2">
         <div class="box-title">
             予約詳細
