アクセスのページ変更

--- a/beginner.html
+++ b/beginner.html
@@ -19,6 +19,9 @@
         <div class="inline_block">
             <a href="index.html"><img src="images/title.jpg" class="title" width="150px" height="auto"></a>
         </div>
+        <div class="inline_block now_page">
+            <strong>初心者向け</strong>
+        </div>
     </div>
     <nav id="header">
         <a href="facility.html"><li>施設・イベント</li></a>
@@ -57,7 +60,7 @@
             </div>
     </div>
 
-    <div class="box2">
+    <div class="box2" style="text-align: left">
             <div class="box-title">
                 初心者向けパック
             </div>
@@ -99,7 +102,6 @@
                         ※支払方法については、メールで案内を送信致します。
                     </p>
                     <br>
-                    <input type="reset" VALUE="書き直し">
                 </form>
                 <a href="confirm.html"><button>送信</button></a>
     </div>
