--- a/course.html
+++ b/course.html
@@ -51,6 +51,17 @@
                     真中の白樺まで300ヤードを越す。<br>
                     ティーショットは、やや右目に落とすとセカンドが狙いやすい。<br>
             </div>
+            <div class="table_child" style="text-align: left">
+                PAR３ショートホール。グリーン両サイドにバンカーあり、グリーンは左側が厄介。<br>
+                左OBに注意！距離が短く感じるので、ショートしやすい
+            </div>
+        </div>
+        <div class="table_parent" style="table-layout: auto">
+            <div class="table_child" style="text-align: left">
+                    HDCP1の長いミドルホール。<br>
+                    真中の白樺まで300ヤードを越す。<br>
+                    ティーショットは、やや右目に落とすとセカンドが狙いやすい。<br>
+            </div>
         </div>
     </div>
     
