--- a/facility.html
+++ b/facility.html
@@ -31,7 +31,19 @@
     </nav>
 </header>
 
-<body>
+<body style="margin-top: 225px">
+    
+    
+        <div class="box2">
+            <div class="box-title">
+                アクセス
+            </div>
+            <img src="images/access.png" width=50% height=80%>
+            <div class="ggmap" width="50%">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2972.336152147483!2d140.8104874938726!3d41.842590908688344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f9e5f5341928587%3A0x14dffa09e575ec04!2z5Ye96aSo77yr77yn44Kr44Oz44OI44Oq44O844Kv44Op44OW!5e0!3m2!1sja!2sjp!4v1562604404580!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+        </div>
+
         <div class="box2">
                 <div class="box-title">
                     レストラン
