コース画面の選択肢作成

--- a/beginner.html
+++ b/beginner.html
@@ -24,11 +24,11 @@
         </div>
     </div>
     <nav id="header">
-        <a href="facility.html"><li>施設・イベント</li></a>
-        <a href="course.html"><li>コース</li></a>
-        <a href="book.html"><li>料金・予約</li></a>
-        <a href="beginner.html"><li><img src=images/beginner.png width=18px height=18px>初心者向け</li></a>
-    </nav>
+            <a href="facility.html"><li class="global">施設・イベント</li></a>
+            <a href="course.html"><li class="global">コース</li></a>
+            <a href="book.html"><li class="global">料金・予約</li></a>
+            <a href="beginner.html"><li class="global"><img src=images/beginner.png width=18px height=18px>初心者向け</li></a>
+        </nav>
 </header>
 
 <body>
