--- a/course.html
+++ b/course.html
@@ -24,10 +24,10 @@
         </div>
     </div>
     <nav id="header">
-        <a href="facility.html"><li>施設・イベント</li></a>
-        <a href="course.html"><li>コース</li></a>
-        <a href="book.html"><li>料金・予約</li></a>
-        <a href="beginner.html"><li><img src=images/beginner.png width=18px height=18px>初心者向け</li></a>
+        <a href="facility.html"><li class="global">施設・イベント</li></a>
+        <a href="course.html"><li class="global">コース</li></a>
+        <a href="book.html"><li class="global">料金・予約</li></a>
+        <a href="beginner.html"><li class="global"><img src=images/beginner.png width=18px height=18px>初心者向け</li></a>
     </nav>
 </header>
 
@@ -39,26 +39,41 @@
     <div class="course_frame">
         <img src="images/course.png" width="100%" height="auto">
     </div>
-    <div class="box2">
+    <br>
+    <div class="box3">
         <div class="box-title">
-            コース1の説明
+            <h3>コースリスト</h3>
         </div>
-        <div class="table_parent" style="table-layout: auto">
-            <div class="table_child" style="text-align: left">
-                    HDCP1の長いミドルホール。<br>
-                    真中の白樺まで300ヤードを越す。<br>
-                    ティーショットは、やや右目に落とすとセカンドが狙いやすい。<br>
+        <div class="course"><strong><a href="index.html">コース全体図</p></a></strong></div>
+        <div class="table_parent">
+            <div class="table_child">    
+                <h3>OUT</h3>
+                <ul style="text-align: left">
+                    <li><a>Course1</a></li>
+                    <li><a>Course2</a></li>
+                    <li><a>Course3</a></li>
+                    <li><a>Course4</a></li>
+                    <li><a>Course5</a></li>
+                    <li><a>Course6</a></li>
+                    <li><a>Course7</a></li>
+                    <li><a>Course8</a></li>
+                    <li><a>Course9</a></li>
+                </ul>
             </div>
-            <div class="table_child" style="text-align: left">
-                PAR３ショートホール。グリーン両サイドにバンカーあり、グリーンは左側が厄介。<br>
-                左OBに注意！距離が短く感じるので、ショートしやすい
-            </div>
-        </div>
-        <div class="table_parent" style="table-layout: auto">
-            <div class="table_child" style="text-align: left">
-                    HDCP1の長いミドルホール。<br>
-                    真中の白樺まで300ヤードを越す。<br>
-                    ティーショットは、やや右目に落とすとセカンドが狙いやすい。<br>
+            <div class="table_child">
+                <h3>IN</h3>
+                <ul style="text-align: left">
+                    <li class="course"><a href="index.html" class="hover">Course10</a></li>
+                    <li><a>Course11</a></li>
+                    <li><a>Course12</a></li>
+                    <li><a>Course13</a></li>
+                    <li><a>Course14</a></li>
+                    <li><a>Course15</a></li>
+                    <li><a>Course16</a></li>
+                    <li><a>Course17</a></li>
+                    <li><a>Course18</a></li>
+                    <li><a>Course19</a></li>
+                </ul>
             </div>
         </div>
     </div>
