--- a/facility.html
+++ b/facility.html
@@ -24,16 +24,23 @@
         </div>
     </div>
     <nav id="header">
-        <a href="facility.html"><li>施設・イベント</li></a>
-        <a href="course.html"><li>コース</li></a>
-        <a href="book.html"><li>料金・予約</li></a>
-        <a href="beginner.html"><li><img src=images/beginner.png width=18px height=18px>初心者向け</li></a>
+        <a href="facility.html"><li class="global">施設・イベント</li></a>
+        <a href="course.html"><li class="global">コース</li></a>
+        <a href="book.html"><li class="global">料金・予約</li></a>
+        <a href="beginner.html"><li class="global"><img src=images/beginner.png width=18px height=18px>初心者向け</li></a>
     </nav>
 </header>
 
-<body style="margin-top: 225px">
+<body style="margin-top: 250px">
+
+    <div class="box3">
+        <ul style="text-align: left">
+            <li><a href="#access">アクセス</a></li>
+        </ul>
+    </div>
+
     <div style="color: #008000">
-        <h1>アクセス</h1>
+        <h1 id="access">アクセス</h1>
     </div>
     <div class="box2">
         <div class="ggmap">
