おおむねの型が完成、あとは埋めるのみ あと初心者向けについて

--- a/course10.html
+++ b/course10.html
@@ -34,11 +34,17 @@
 <body>
     <br>
     <div style="color: #008000">
-        <h1>コース全体図</h1>
+        <h1>コース10</h1>
+        <p style="color: red">B492・R471Y　PAR5</p>
     </div>
-    <div class="course_frame">
-        <img src="images/course.png" width="100%" height="auto">
+    
+    <div class="course_frame2">
+        <img src="images/course10.jpg" width="100%" height="auto">
     </div>
+    <img src="images/in10.jpg" width="auto" height="100%">
+    <p>
+        距離の長いサービスロング。フォローになると２オンも可能。パーオンはさほど難しくはない。グリーンは向かって左から右に速くスライスライン。
+    </p>
     <br>
     <div class="box3">
         <div class="box-title">
