--- a/facility.html
+++ b/facility.html
@@ -36,6 +36,8 @@
     <div class="box3">
         <ul style="text-align: left">
             <li><a href="#access">アクセス</a></li>
+            <li><a href="#access">施設設備</a></li>
+            <li><a href="#access">イベント</a></li>
         </ul>
     </div>
 
@@ -46,6 +48,33 @@
         <div class="ggmap">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2972.336152147483!2d140.8104874938726!3d41.842590908688344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f9e5f5341928587%3A0x14dffa09e575ec04!2z5Ye96aSo77yr77yn44Kr44Oz44OI44Oq44O844Kv44Op44OW!5e0!3m2!1sja!2sjp!4v1562604404580!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
+    </div>
+
+    <div style="color: #008000">
+        <h1 id="access">施設設備</h1>
+    </div>
+
+    <div style="color: #008000">
+        <h1 id="access">イベント情報</h1>
+    </div>
+    <div class="box3">
+        4月23日（火）　第1回サンキューオープン<br>
+        5月22日（水）　緑風オープン<br>
+        6月18日（火）　第２回サンキューオープン<br>
+        7月10日（水）　サマーオープン<br>
+        8月15日（木）　ＫＧＣＣオープン<br>
+        9月4日（水）　小泉グループ杯<br>
+        9月18日（水）　ＫＧ大感謝祭<br>
+        10月10日（木）　秋の味覚祭<br>
+        10月24日（木）　第３回サンキューオープン<br>
+        11月1日（金）　ラストオープン<br>
+        参加費  : 全てのオープンコンペ 3,000<br>
+        プレー費: サンキューオープン、ラストオープン 3,900<br>
+        その他  : 6,000<br>
+        
+        追加や変更が有った場合には掲示内容を随時変更してまいります。<br>
+        上記競技のほかにもオープンコンペを企画していきます。<br>
+        他、ご質問等ございましたらご遠慮なくお電話にてお問い合わせください。<br>
     </div>
 
     <div class="box2">
