--- a/facility.html
+++ b/facility.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/head_style.css">
     <link rel="stylesheet" type="text/css" href="css/body_style.css">
+    <link rel="stylesheet" type="text/css" href="css/slide_show.css">
 </head>
 
 <header>
@@ -36,8 +37,9 @@
     <div class="box3">
         <ul style="text-align: left">
             <li><a href="#access">アクセス</a></li>
-            <li><a href="#access">施設設備</a></li>
-            <li><a href="#access">イベント</a></li>
+            <li><a href="#facility">施設設備</a></li>
+            <li><a href="#event">イベント</a></li>
+            <li><a href="#lent">場所貸出について</a></li>
         </ul>
     </div>
 
@@ -51,56 +53,67 @@
     </div>
 
     <div style="color: #008000">
-        <h1 id="access">施設設備</h1>
+        <h1 id="facility">施設設備</h1>
+    </div>
+    <div class="box2 table_parent">
+        <div class="table_child"></div>
+        個別ロッカーを320円で貸し出しています。
+        <img src="images/DSC_6041.JPG" class="course_frame2">
+        </div>
+        <div class="table_child"></div>
+        <img src="images/DSC_6044.JPG" class="course_frame2">
+        KGカントリークラブの景色が一望できる温泉もあります!
+        </div>
+    </div>
+
+    <div style="margin-top: 100px">
+        <div style="color: #008000">
+            <h1 id="event">イベント情報</h1>
+        </div>
+        <div class="box3" style="color: #000000">
+            4月23日（火）　第1回サンキューオープン<br>
+            <br>
+            5月22日（水）　緑風オープン<br>
+            <br>
+            6月18日（火）　第２回サンキューオープン<br>
+            <br>
+            7月10日（水）　サマーオープン<br>
+            <br>
+            8月15日（木）　ＫＧＣＣオープン<br>
+            <br>
+            9月4日（水）　小泉グループ杯<br>
+            <br>
+            9月18日（水）　ＫＧ大感謝祭<br>
+            <br>
+            10月10日（木）　秋の味覚祭<br>
+            <br>
+            10月24日（木）　第３回サンキューオープン<br>
+            <br>
+            11月1日（金）　ラストオープン<br>
+            参加費  : 全てのオープンコンペ 3,000円<br>
+            プレー費: サンキューオープン、ラストオープン 3,900円<br>
+            その他  : 6,000円<br>
+            
+            追加や変更が有った場合には掲示内容を随時変更してまいります。<br>
+            上記競技のほかにもオープンコンペを企画していきます。<br>
+            他、ご質問等ございましたらご遠慮なくお電話にてお問い合わせください。<br>
+        </div>
     </div>
 
     <div style="color: #008000">
-        <h1 id="access">イベント情報</h1>
+        <h1 id="lent">場所貸出について</h1>
     </div>
-    <div class="box3">
-        4月23日（火）　第1回サンキューオープン<br>
-        5月22日（水）　緑風オープン<br>
-        6月18日（火）　第２回サンキューオープン<br>
-        7月10日（水）　サマーオープン<br>
-        8月15日（木）　ＫＧＣＣオープン<br>
-        9月4日（水）　小泉グループ杯<br>
-        9月18日（水）　ＫＧ大感謝祭<br>
-        10月10日（木）　秋の味覚祭<br>
-        10月24日（木）　第３回サンキューオープン<br>
-        11月1日（金）　ラストオープン<br>
-        参加費  : 全てのオープンコンペ 3,000<br>
-        プレー費: サンキューオープン、ラストオープン 3,900<br>
-        その他  : 6,000<br>
-        
-        追加や変更が有った場合には掲示内容を随時変更してまいります。<br>
-        上記競技のほかにもオープンコンペを企画していきます。<br>
-        他、ご質問等ございましたらご遠慮なくお電話にてお問い合わせください。<br>
-    </div>
-
     <div class="box2">
-            <div class="box-title">
-                レストラン
-            </div>
-            <div class="inline_block">
-                <img src="images/lamb.jpg">
-            </div>
-            <div class="inline_block">
-                    上ラムジンギスカンセット 〇〇円
-            </div>
-            <br>
-            <div class="inline_block">
-                <img src="images/06yakisoba.jpg">
-            </div>
-            <div class="inline_block">
-                    あんかけやきそば 〇〇円
-            </div>
+        <div style="text-align: center">
+            <h3>
+                KGカントリークラブでは、ゴルフ以外の利用も大歓迎!<br>
+                撮影現場やドローン飛行など、広い土地と美しい景色を活用してみませんか?<br>
+                価格や用途など、詳しくは電話にてご相談ください!<br>
+                <strong>電話番号 TEL:0000-0000-0000 </strong>
+            </h3>   
+        </div>
     </div>
 
-
-
-    <footer>
-        Copyright ©︎ 2019 Shima All Rights Reserved.
-    </footer>
 </body>
 
 </html>
