--- a/course15.html
+++ b/course15.html
@@ -20,7 +20,7 @@
             <a href="index.html"><img src="images/title.jpg" class="title" width="150px" height="auto"></a>
         </div>
         <div class="inline_block now_page">
-            <strong>コース10</strong>
+            <strong>コース15</strong>
         </div>
     </div>
     <nav id="header">
@@ -34,20 +34,16 @@
 <body>
     <br>
     <div style="color: #008000">
-        <h1>コース10</h1>
-        <p style="color: red">B492・R471Y　PAR5</p>
+        <h1>コース15</h1>
+        <p style="color: red">B430Y・R413Y　PAR4</p>
     </div>
     
     <div class="course_frame2">
-        <img src="images/course10.jpg" width="100%" height="auto">
+        <img src="images/course15.jpg" width="100%" height="auto">
     </div>
-    <div class="course_frame2">
-        <img src="images/course10a.jpg" width="100%" height="auto">
-    </div>
-    <img src="images/in10.jpg" width="auto" height="100%">
+    <img src="images/in15.jpg" width="auto" height="100%">
     <p>
-        丘陵地ながら河川敷を思わせる平坦な地型にゆったりと広いフェアウェアと充分な距離で交差する10ホール<br>
-        距離の長いサービスロング。フォローになると2オンも可能。パーオンはさほど難しくはない。グリーンは向かって左から右に速くスライスライン。
+            池越えの一番長いショートホール。グリーンも大きく距離もタップリ。クラブ選択は大きめの方が良い。
     </p>
     <br>
     <div class="box3">
@@ -84,8 +80,11 @@
                             <li class="course"><a href="course18.html" class="hover">Course18</a></li>
                         </ul>
                     </div>
-        </div>
     </div>
+    
+    <footer>
+        Copyright ©︎ 2019 Shima All Rights Reserved.
+    </footer>
 </body>
 
 </html>
