コースの調整終了

--- a/course1.html
+++ b/course1.html
@@ -20,7 +20,7 @@
             <a href="index.html"><img src="images/title.jpg" class="title" width="150px" height="auto"></a>
         </div>
         <div class="inline_block now_page">
-            <strong>コース</strong>
+            <strong>コース1</strong>
         </div>
     </div>
     <nav id="header">
@@ -34,7 +34,7 @@
 <body>
     <br>
     <div style="color: #008000">
-        <h1>コース11</h1>
+        <h1>コース1</h1>
         <p style="color: red">B406Y・R393Y　PAR4</p>
     </div>
     
@@ -83,10 +83,6 @@
             </div>
         </div>
     </div>
-    
-    <footer>
-        Copyright ©︎ 2019 Shima All Rights Reserved.
-    </footer>
 </body>
 
 </html>
