--- a/course11.html
+++ b/course11.html
@@ -44,7 +44,7 @@
     <img src="images/in11.jpg" width="auto" height="100%">
     <p>
             やや左ドッグの長いミドルホール<br>
-            セカンドは距離が残り、左右ＯＢに注意このホールはティショットを確実にフェアウエーに落とすことが大切
+            セカンドは距離が残り、左右OBに注意このホールはティショットを確実にフェアウエーに落とすことが大切
     </p>
     <br>
     <div class="box3">
