--- a/course2.html
+++ b/course2.html
@@ -20,7 +20,7 @@
             <a href="index.html"><img src="images/title.jpg" class="title" width="150px" height="auto"></a>
         </div>
         <div class="inline_block now_page">
-            <strong>コース</strong>
+            <strong>コース2</strong>
         </div>
     </div>
     <nav id="header">
@@ -34,7 +34,7 @@
 <body>
     <br>
     <div style="color: #008000">
-        <h1>コース11</h1>
+        <h1>コース2</h1>
         <p style="color: red">B168Y・R154Y　PAR3</p>
     </div>
     
@@ -43,7 +43,7 @@
     </div>
     <img src="images/out2.jpg" width="auto" height="100%">
     <p>
-            PAR３ショートホール。<br>
+            PAR3ショートホール。<br>
             グリーン両サイドにバンカーあり、グリーンは左側が厄介。<br>
             左OBに注意！距離が短く感じるので、ショートしやすい。
     </p>
