--- a/course4.html
+++ b/course4.html
@@ -20,7 +20,7 @@
             <a href="index.html"><img src="images/title.jpg" class="title" width="150px" height="auto"></a>
         </div>
         <div class="inline_block now_page">
-            <strong>コース</strong>
+            <strong>コース4</strong>
         </div>
     </div>
     <nav id="header">
