リンク作成_完成

--- a/book.html
+++ b/book.html
@@ -36,20 +36,20 @@
     <br>
     <div class="box3">
         <ul style="text-align: left">
-            <li><a href="#access">料金表</a></li>
-            <li><a href="#access">予約詳細</a></li>
-            <li><a href="#access">予約フォーム</a></li>
+            <li><a href="#money">料金表</a></li>
+            <li><a href="#detail">予約詳細</a></li>
+            <li><a href="#book">予約フォーム</a></li>
         </ul>
     </div>
     
     <div style="text-align: center">
         <div style="color: #008000">
-                <h1 id="access">料金表</h1>
+                <h1 id="money">料金表</h1>
         </div>
         <img src="images/money.JPG">
     </div>
     
-    <div class="box2">
+    <div class="box2" id="detail">
         <div class="box-title">
             予約詳細
         </div>
@@ -66,7 +66,7 @@
             </h2>
         </p>
     </div>
-    <div class="box2">
+    <div class="box2" id="book">
         <div class="box-title">
             予約
         </div>
