--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
             <div class="picture_frame overray table_child">
                 <div class="picture_item"><img src="images/drone.jpg" width=100% height=350px></div>
-                <a href="index.html">
+                <a href="facility.html#lent">
                     <div class="mask">
                             <div class="caption">
                                 <h1>場所貸出について</h1>
