--- a/course2.html
+++ b/course2.html
@@ -57,30 +57,29 @@
             <div class="table_child">    
                 <h3>OUT</h3>
                 <ul style="text-align: left">
-                    <li><a>Course1</a></li>
-                    <li><a>Course2</a></li>
-                    <li><a>Course3</a></li>
-                    <li><a>Course4</a></li>
-                    <li><a>Course5</a></li>
-                    <li><a>Course6</a></li>
-                    <li><a>Course7</a></li>
-                    <li><a>Course8</a></li>
-                    <li><a>Course9</a></li>
+                    <li class="course"><a href="course1.html" class="hover">Course1</a></li>
+                    <li class="course"><a href="course2.html" class="hover">Course2</a></li>
+                    <li class="course"><a href="course3.html" class="hover">Course3</a></li>
+                    <li class="course"><a href="course4.html" class="hover">Course4</a></li>
+                    <li class="course"><a href="course5.html" class="hover">Course5</a></li>
+                    <li class="course"><a href="course6.html" class="hover">Course6</a></li>
+                    <li class="course"><a href="course7.html" class="hover">Course7</a></li>
+                    <li class="course"><a href="course8.html" class="hover">Course8</a></li>
+                    <li class="course"><a href="course9.html" class="hover">Course9</a></li>
                 </ul>
             </div>
             <div class="table_child">
                 <h3>IN</h3>
                 <ul style="text-align: left">
                     <li class="course"><a href="course10.html" class="hover">Course10</a></li>
-                    <li><a>Course11</a></li>
-                    <li><a>Course12</a></li>
-                    <li><a>Course13</a></li>
-                    <li><a>Course14</a></li>
-                    <li><a>Course15</a></li>
-                    <li><a>Course16</a></li>
-                    <li><a>Course17</a></li>
-                    <li><a>Course18</a></li>
-                    <li><a>Course19</a></li>
+                    <li class="course"><a href="course11.html" class="hover">Course11</a></li>
+                    <li class="course"><a href="course12.html" class="hover">Course12</a></li>
+                    <li class="course"><a href="course13.html" class="hover">Course13</a></li>
+                    <li class="course"><a href="course14.html" class="hover">Course14</a></li>
+                    <li class="course"><a href="course15.html" class="hover">Course15</a></li>
+                    <li class="course"><a href="course16.html" class="hover">Course16</a></li>
+                    <li class="course"><a href="course17.html" class="hover">Course17</a></li>
+                    <li class="course"><a href="course18.html" class="hover">Course18</a></li>
                 </ul>
             </div>
         </div>
